# NetSim

./: .gitignore  CMakeLists.txt  main.cpp  run.sh  runtest.sh
config/: Config.h
core/Blockchain/: Blockchain.cpp  Blockchain.h
core/Blockchain/Block/: Block.cpp  PoWBlock.cpp  PoWBlock.h
core/EventManagement/Event/: AsyncEvent.cpp  AsyncEvent.h  Event.cpp  Event.h
core/EventManagement/Event/EventTypes/: EventType.h  MessageToNodeEvent.cpp  MessageToNodeEvent.h  ScheduleNextBlockEvent.h
core/EventManagement/EventManager/: EventManager.cpp  EventManager.h
core/Graph/: Graph.h
core/Network/: Network.cpp  Network.h
core/Network/Messages/: Message.cpp  Message.h  MessageType.h  NewBlockMinedMessage.cpp  NewBlockMinedMessage.h  SubnetMessage.cpp  SubnetMessage.h
core/Network/Node/: Miner.cpp  Miner.h  Node.cpp  Node.h  NodeId.h  NodeType.h
core/Networking/: Bandwidth.cpp  Bandwidth.h  IPv4Address.cpp  IPv4Address.h  IPv4Message.cpp  IPv4Message.h  NetworkMessage.cpp  NetworkMessage.h  RoutingTable.cpp  RoutingTable.h  Subnet.cpp  Subnet.h
core/Networking/BandwidthModels/: TransferProgress.cpp  TransferProgress.h
core/Networking/BandwidthModels/BandwidthDetermination/: OECDReport.cpp  OECDReport.h
core/Networking/BandwidthModels/gnp/: AbstractGnpNetBandwidthManager.cpp  AbstractGnpNetBandwidthManager.h  GnpNetBandwidthAllocation.cpp  GnpNetBandwidthAllocation.h  GnpNetBandwidthManager.cpp  GnpNetBandwidthManager.h
core/Networking/Isolation/: IsolationManager.cpp  IsolationManager.h  IsolationModel.cpp  IsolationModel.h
core/Networking/Isolation/Events/: PartitionEvent.cpp  PartitionEvent.h
core/Networking/LatencyModels/: City.cpp  City.h  GnpLatencyModel.cpp  GnpLatencyModel.h  LatencyModel.cpp  LatencyModel.h  LinkMetrics.cpp  LinkMetrics.h  PingER.cpp  PingER.h  RandomLatencyModel.cpp  RandomLatencyModel.h  StaticLatencyModel.cpp  StaticLatencyModel.h  WonderNetwork.cpp  WonderNetwork.h
core/Networking/NetworkLayer/: IPv4Address.cpp  IPv4Address.h  IPv4Message.cpp  IPv4Message.h  L3Address.cpp  L3Address.h  L3Protocol.h  NetworkLayer.cpp  NetworkLayer.h  NetworkMessage.cpp  NetworkMessage.h  NetworkProtocol.h
core/Networking/TransportLayer/: L4Address.cpp  L4Address.h  L4Message.cpp  L4Message.h  L4Protocol.cpp  L4Protocol.h  TCPMesage.cpp  TCPMessage.cpp  TCPMessage.h  TransportLayer.cpp  TransportLayer.h  UDPMessage.cpp  UDPMessage.h
core/Simulator/: Simulator.cpp  Simulator.h
helpers/: Center.h  Initializations.cpp  Initializations.h  Random.cpp  Random.h
models/BlockchainManagement/GlobalOrchestration/: Bitcoin.cpp  Bitcoin.h  GlobalOrchestration.cpp  GlobalOrchestration.h
models/BlockchainManagementModels/: BitcoinModel.cpp  BitcoinModel.h  BlockchainManagementModel.h
models/LocalProtocols/: BitcoinMiner.cpp  BitcoinMiner.h  DummyProtocol.cpp  DummyProtocol.h  Protocol.cpp  Protocol.h  Relayer.cpp  Relayer.h
models/Networking/: BitcoinRoutingTable.cpp  BitcoinRoutingTable.h  FlexibleRoutingTable.cpp  FlexibleRoutingTable.h
models/NodePlacement/: ClusterBased.h  Initializations.h  RandomNodeLocations.h
tests/: BlockProduction.cpp  GnpLatencyModelTest.cpp  GnpLatencyModelTest.h  NetworkLayerTest.cpp  NetworkLayerTest.h  SubnetTest.cpp  SubnetTest.h  TransportLayerTest.cpp  TransportLayerTest.h  main.cpp
